Little grey koala

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 class="hello">HELLO</h1>
             <div class="img">
-                <p>Little grey koala</p>
+                <p class="text">Little grey koala</p>
             </div>
         </div>
     </header>
