--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <p class="text">Little grey koala</p>
             </div>
         </div>
+        <div class="container">
+            <h2 class="life">Life of koala</h2>
+        </div>
     </header>
     
 </body>
